fix compilation errors for 2021.3