@@ -21,6 +21,7 @@ import javax.annotation.Nonnull;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class MySqlDatabaseResourceDefinition extends SqlDatabaseResourceDefinition<MySqlDatabase> {
     public static final MySqlDatabaseResourceDefinition INSTANCE = new MySqlDatabaseResourceDefinition();
@@ -39,7 +40,7 @@ public class MySqlDatabaseResourceDefinition extends SqlDatabaseResourceDefiniti
         return Azure.az(AzureMySql.class).list().stream()
             .flatMap(m -> m.servers().list().stream())
             .flatMap(s -> s.databases().list().stream())
-            .map(this::define).toList();
+            .map(this::define).collect(Collectors.toList());
     }
 
     @Override
